--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,8 @@ canvas {
   margin-left: auto;
   margin-right: auto;
   display: block;
-  margin-top: 10px;
+  margin-top: 0px;
+  left:25%;
   cursor:none; 
 
 }
@@ -31,10 +32,10 @@ canvas {
 canvas { position: absolute; }
 #ui-players { z-index: 7 }
 #ui-cards-player { z-index:6 }
+#ui-looser { z-index:6 }
 #ui-bunch-cards { z-index: 4 }
 #ui-timer { z-index: 2 }
 #ui-message { z-index: 4 }
 #ui-totem { z-index: 4 }
 #ui-layer { z-index: 5 }
-
 #background-layer { z-index: 1 }
