--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,9 @@ body {
   height:0;
   background-color: rgb(0, 0, 0);
 }
-
+p,h1, h2, h3, h4, h5, h6 {
+  color: white !important;
+ }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -23,29 +25,73 @@ code {
 }
 
 .center {
+  background-color: black !important;
+  padding: 0;
   margin: auto;
-  margin-top: 30vh; /* poussé de la moitié de hauteur de viewport */
-  width: 50%;
-  border-radius: 15px;
-  padding: 20px;
-}
-
-#game > canvas {
-  position: absolute;
-  padding-left: 0;
-  padding-right: 0;
-  margin-left: auto;
-  margin-right: auto;
   display: block;
-  margin-top: 0px;
-  left:25%;
+  height: 97%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-radius: 15px;
+  border-style: solid;
+  border-color:white;
+
+}
+.buttonGoogle > img{
+height: 22px;
+margin-right: 2px;
+}
+.centerContent {
+  padding: 0;
+  margin: auto;
+  display: block;
+
+
+}
+.current-score {
+  left: 10%;
+}
+.top-score {
+  right: 10%;
+}
+.score {
+  background-color: #333333ad;
+  border-radius: 8px;
+  text-align: center;
+  width: 160px;
+  color:white;
+  display: block;
+  position: absolute;
+  top: 15px;
+  z-index: 1;
+  font-size: 20px;
+}
+#game > canvas {
+  padding: 0;
+  margin: auto;
+  display: block;
+  height: 99%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   cursor:none; 
 
 }
-#ui-players { z-index: 100 }
+
+#ui-players { 
+  z-index: 100;    
+  border-radius: 15px;
+  border-color: white;
+  border-style: solid;
+}
 #ui-cards-player { z-index:50 }
 #ui-looser { z-index:50 }
-#ui-bunch-cards { z-index: 50 }
+#ui-bunch-cards { z-index: 30 }
 #ui-timer { z-index: 2 }
 #ui-mouse-animation { z-index: 100}
 #ui-totem { z-index: 55 }
@@ -62,11 +108,16 @@ position: fixed;
 .skin {
   background-color: black;
   cursor: pointer;
-  border: solid 2px;}
+  border: solid 2px;
+  border-radius: 5px;
+
+}
 
 .skin-select {
   background-color: black;
+  border: solid 5px;
+  border-color: #0087ff;
+  border-radius: 14px;
 
-  border: solid 4px;
 
 }
