--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,7 +9,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height:0;
-  background-color: rgb(0, 0, 0);
+  background-color: #073B4C;
 }
 p,h1, h2, h3, h4, h5, h6 {
   color: white !important;
@@ -25,7 +28,7 @@ code {
 }
 
 .center {
-  background-color: black !important;
+  background-color:#073B4C !important;
   padding: 0;
   margin: auto;
   display: flex;
@@ -58,8 +61,8 @@ margin-right: 2px;
   right: 10%;
 }
 .score {
-  background-color: #333333ad;
-  border-radius: 8px;
+  border-radius: 15px;
+  border: solid;
   text-align: center;
   width: 160px;
   color:white;
@@ -83,22 +86,19 @@ margin-right: 2px;
 
 }
 
-#ui-players { 
+#ui-looser { 
   z-index: 100;    
-  border-radius: 15px;
-  border-color: white;
-  border-style: solid;
 }
-#ui-cards-player { z-index:50 }
-#ui-looser { z-index:50 }
-#ui-bunch-cards { z-index: 30 }
-#ui-timer { z-index: 2 }
-#ui-mouse-animation { z-index: 100}
-#ui-totem { z-index: 55 }
-#ui-totem-animation { z-index: 3 }
 
-#ui-layer { z-index: 40 }
-#background-layer { z-index: 1;
+#ui-layer { 
+  z-index: 40;
+  border-radius: 15px;
+  border:solid;
+  border-color: white;
+  border-style: solid; }
+#background-layer { 
+
+z-index: 1;
 height: 100%;
 margin: 0;
 position: fixed;
@@ -106,15 +106,12 @@ position: fixed;
 
 
 .skin {
-  background-color: black;
   cursor: pointer;
-  border: solid 2px;
-  border-radius: 5px;
+
 
 }
 
 .skin-select {
-  background-color: black;
   border: solid 5px;
   border-color: #0087ff;
   border-radius: 14px;
